--- a/Nivell 1/Nivel 1.css
+++ b/Nivell 1/Nivel 1.css
@@ -15,6 +15,13 @@
   border-bottom: 0.5rem solid black;
 }
 
+@media (max-width: 500px) {
+  .top-1 {
+    flex-direction: column;
+    border-bottom: 1rem solid black;
+  }
+}
+
 .top-1 div {
   background-color: #ea5455;
   padding: 0.5rem;
@@ -29,6 +36,12 @@
 }
 .top-1 div:nth-child(3) {
   flex-grow: 1;
+}
+
+@media (max-width: 500px) {
+  .top-1 div:nth-child(2) {
+    margin: 1rem 0;
+  }
 }
 
 .bottom-1 {
@@ -76,6 +89,12 @@
   display: flex;
 }
 
+@media (max-width: 500px) {
+  .row {
+    flex-direction: column;
+  }
+}
+
 .row div {
   padding: 0.5rem;
   margin-bottom: 1rem;
@@ -85,6 +104,12 @@
 
 .row div:nth-child(1) {
   margin-right: 1rem;
+}
+
+@media (max-width: 500px) {
+  .row div:nth-child(1) {
+    margin-right: 0;
+  }
 }
 
 .full-row div {
