--- a/Nivell 2/Nivell 2.css
+++ b/Nivell 2/Nivell 2.css
@@ -7,6 +7,9 @@
 * {
   box-sizing: border-box;
 }
+body {
+  margin: 0 7em;
+}
 
 h1,
 h2,
@@ -17,4 +20,44 @@ li,
 ul {
   padding: 0;
   margin: 0;
+  list-style: none;
+}
+#header {
+  background: url("./images/header.jpg") center/cover no-repeat;
+  border: 4px solid orange;
+  height: 80vh;
+}
+
+#navbar {
+  border: 2px solid rebeccapurple;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo-div {
+  width: 20%;
+}
+
+.logo-div img {
+  width: 80px;
+}
+
+.links-div {
+  width: 80%;
+}
+
+.ul-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.social-div {
+  width: 20%;
+}
+
+.ul-social {
+  display: flex;
+  justify-content: center;
 }
