--- a/Nivell 2/Nivell 2.css
+++ b/Nivell 2/Nivell 2.css
@@ -53,6 +53,12 @@ ul {
   text-align: center;
 }
 
+@media (max-width: 868px) {
+  .logo-div {
+    width: 100%;
+  }
+}
+
 .logo-div img {
   width: 70px;
 }
@@ -71,11 +77,21 @@ ul {
     flex-direction: column;
     align-items: center;
   }
+
+  .li-links {
+    margin-bottom: 0.3rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
 }
 
 .li-links a {
   text-decoration: none;
   color: lightslategray;
+  transition: all 0.3s ease-in;
+}
+
+.li-links a:hover {
+  color: #f08080;
 }
 
 .icons {
