Added CTA div and positioned it at the bottom of the header

--- a/Nivell 2/Nivell 2.css
+++ b/Nivell 2/Nivell 2.css
@@ -26,10 +26,13 @@ ul {
   margin: 0;
   list-style: none;
 }
+
+/* HEADER STYLING SECTION */
+
 #header {
   background: url("./images/header.jpg") center/cover no-repeat;
-  border: 4px solid orange;
-  height: 80vh;
+  height: 60vh;
+  position: relative;
 }
 
 #navbar {
@@ -114,3 +117,22 @@ ul {
     right: 0;
   }
 }
+
+.cta {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 90%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.cta h1 {
+  color: rgba(238, 116, 99, 0.8);
+  font-size: 2.8rem;
+  font-family: serif;
+  font-weight: 400;
+  text-align: center;
+  padding: 1rem 0 8rem 0;
+}
+
+/*------ END HEADER STYLING SECTION ------*/
