--- a/Nivell 2/Nivell 2.css
+++ b/Nivell 2/Nivell 2.css
@@ -36,8 +36,7 @@ ul {
 }
 
 #navbar {
-  border: 2px solid rebeccapurple;
-  margin-top: 3rem;
+  padding-top: 3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -133,6 +132,13 @@ ul {
   font-weight: 400;
   text-align: center;
   padding: 1rem 0 8rem 0;
+}
+
+@media (max-width: 868px) {
+  .cta h1 {
+    font-size: 2.4rem;
+    padding: 1rem 0 4rem 0;
+  }
 }
 
 /*------ END HEADER STYLING SECTION ------*/
