--- a/Nivell 2/Nivell 2.css
+++ b/Nivell 2/Nivell 2.css
@@ -228,4 +228,10 @@ aside {
   column-count: 2;
 }
 
+.extra-info {
+  text-align: center;
+  padding: 0.8rem;
+  font-weight: 600;
+}
+
 /*------ END OF MAIN SECTION ------*/
