--- a/Nivell 2/Nivell 2.css
+++ b/Nivell 2/Nivell 2.css
@@ -103,7 +103,7 @@ ul {
 }
 
 .li-links a:hover {
-  color: #f08080;
+  color: var(--clr-accent);
 }
 
 .icons {
@@ -136,7 +136,7 @@ ul {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .cta h1 {
-  color: rgba(238, 116, 99, 0.8);
+  color: rgba(238, 116, 99, 0.6);
   font-size: 2.8rem;
   font-family: serif;
   font-weight: 400;
@@ -231,6 +231,10 @@ aside h3 {
   padding-top: 2rem;
   color: gray;
   text-decoration: none;
+  transition: all 0.3s ease-in;
+}
+.post-container a:hover {
+  color: var(--clr-accent);
 }
 
 .blog-img {
