--- a/Nivell 2/Nivell 2.css
+++ b/Nivell 2/Nivell 2.css
@@ -73,6 +73,21 @@ ul {
 
 .logo-div img {
   width: 70px;
+  animation: spinningLogo 8s ease-in-out 2s infinite;
+  /* animation-name: spinningLogo;
+  animation-duration: 5s;
+  animation-delay: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out; */
+}
+
+@keyframes spinningLogo {
+  from {
+    transform: rotateZ(0);
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
 }
 
 .links-div {
