--- a/Nivell 2/Nivell 2.css
+++ b/Nivell 2/Nivell 2.css
@@ -151,12 +151,20 @@ ul {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .cta h1 {
-  color: rgba(238, 116, 99, 0.6);
+  color: var(--clr-accent);
+  opacity: 0.7;
   font-size: 2.8rem;
   font-family: serif;
   font-weight: 400;
   text-align: center;
   padding: 1rem 0 8rem 0;
+  animation: opacityChange 4s ease-in-out 2s infinite;
+}
+
+@keyframes opacityChange {
+  50% {
+    opacity: 0.2;
+  }
 }
 
 @media (max-width: 868px) {
@@ -172,7 +180,17 @@ ul {
 main {
   margin-top: 1rem;
   display: flex;
+  animation: appearSuddenly 2s ease-in-out 1s 1;
 }
+@keyframes appearSuddenly {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @media (max-width: 1100px) {
   main {
     flex-direction: column;
