--- a/Nivell 3/Nivell 3.css
+++ b/Nivell 3/Nivell 3.css
@@ -61,28 +61,20 @@ ul {
 
 #navbar {
   padding-top: 3rem;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr;
   align-items: center;
   font-size: 1.1rem;
-  position: relative;
 }
 
 @media (max-width: 868px) {
   #navbar {
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
 }
 
 .logo-div {
-  width: 20%;
   text-align: center;
-}
-
-@media (max-width: 868px) {
-  .logo-div {
-    width: 100%;
-  }
 }
 
 .logo-div img {
@@ -96,19 +88,16 @@ ul {
   }
 }
 
-.links-div {
-  width: 80%;
-}
-
 .ul-container {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  text-align: center;
+  grid-template-columns: repeat(5, 1fr);
+  justify-content: center;
 }
 
 @media (max-width: 768px) {
   .ul-container {
-    flex-direction: column;
-    align-items: center;
+    grid-template-columns: 1fr;
   }
 
   .li-links {
@@ -131,12 +120,9 @@ ul {
   margin-right: 0.3rem;
 }
 
-.social-div {
-  width: 20%;
-}
-
 .ul-social {
-  display: flex;
+  display: grid;
+  grid-template-columns: 2rem 2rem;
   justify-content: center;
 }
 
@@ -164,14 +150,14 @@ ul {
   font-weight: 400;
   text-align: center;
   padding: 1rem 0 8rem 0;
-  /* animation: opacityChange 4s ease-in-out 2s infinite; */
+  animation: opacityChange 2s ease-in-out 2s infinite;
 }
 
-/* @keyframes opacityChange {
+@keyframes opacityChange {
   50% {
     opacity: 0.2;
   }
-} */
+}
 
 @media (max-width: 868px) {
   .cta h1 {
@@ -185,7 +171,8 @@ ul {
 /*------ MAIN SECTION ------*/
 main {
   margin-top: 1rem;
-  display: flex;
+  display: grid;
+  grid-template-columns: 80% 20%;
   animation: appearSuddenly 2s ease-in-out 1s 1;
 }
 @keyframes appearSuddenly {
@@ -199,23 +186,17 @@ main {
 
 @media (max-width: 1100px) {
   main {
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
 }
 
 .content-section {
-  width: 80%;
   background-color: var(--clr-secondary);
   margin-right: 1rem;
 }
-@media (max-width: 1100px) {
-  .content-section {
-    width: 100%;
-  }
-}
+
 
 aside {
-  width: 20%;
   background-color: var(--clr-secondary);
   text-align: center;
   padding: 2rem;
