--- a/Nivell 3/Nivell 3.css
+++ b/Nivell 3/Nivell 3.css
@@ -129,7 +129,7 @@ ul {
 @media (max-width: 868px) {
   .social-div {
     position: absolute;
-    top: 1;
+    top: 2rem;
     right: 0;
   }
 }
@@ -194,7 +194,11 @@ main {
   background-color: var(--clr-secondary);
   margin-right: 1rem;
 }
-
+@media (max-width: 1100px) {
+  .content-section {
+    margin-right: 0;
+  }
+}
 
 aside {
   background-color: var(--clr-secondary);
@@ -207,29 +211,23 @@ aside h3 {
 }
 @media (max-width: 1100px) {
   aside {
-    width: 100%;
     margin-top: 1rem;
   }
 }
 
 .content-row {
-  display: flex;
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
 @media (max-width: 1100px) {
   .content-row {
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
 }
 
 .blog-post {
-  width: 50%;
   padding: 0.7rem;
-}
-@media (max-width: 1100px) {
-  .blog-post {
-    width: 100%;
-  }
 }
 
 .post-container {
