--- a/Nivell 3/Nivell 3.css
+++ b/Nivell 3/Nivell 3.css
@@ -65,6 +65,36 @@ ul {
   grid-template-columns: 1fr 4fr 1fr;
   align-items: center;
   font-size: 1.1rem;
+  animation: slideIn 1s ease 0s 1 normal forwards;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(-150px);
+    animation-timing-function: ease-in;
+  }
+  20% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+  }
+  40% {
+    transform: translateY(-20px);
+    animation-timing-function: ease-in;
+  }
+  60% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+  }
+  80% {
+    transform: translateY(-10px);
+    animation-timing-function: ease-in;
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+  }
 }
 
 @media (max-width: 868px) {
@@ -167,15 +197,6 @@ main {
   margin-top: 1rem;
   display: grid;
   grid-template-columns: 80% 20%;
-  animation: appearSuddenly 2s ease-in-out 1s 1;
-}
-@keyframes appearSuddenly {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
 
 @media (max-width: 1100px) {
